--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 MONGODB_URI=mongodb+srv://jhos:22314121@cluster0.1jusnio.mongodb.net/?retryWrites=true&w=majority
 
 TOKEN_SECRET=22314121
+
+MODO=developer
+
+
