--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
-  },
+    "dev": "cross-env NODE_ENV=development nodemon src/index.js --ignore client",
+    "start": "cross-env NODE_ENV=production node src/index.js"  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -27,6 +26,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.1.3"
   }
 }
