--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env NODE_ENV=development nodemon src/index.js --ignore client",
-    "start": "cross-env NODE_ENV=production node src/index.js"  },
+    "start": " node src/index.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -23,8 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
-    "zod": "^3.22.4",
-    "cross-env": "^7.0.3"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.3",
