--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env NODE_ENV=development nodemon src/index.js --ignore client",
-    "start": "cross-env NODE_ENV=development node src/index.js --ignore client"
+    "start": "node ./src/index"
   },
   "keywords": [],
   "author": "",
@@ -24,7 +24,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
-    "cross-env": "^7.0.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
